--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,10 @@
 platform = atmelavr
 board = uno
 framework = arduino
+monitor_speed = 57600
+;lib_deps =
+;    ${common_env_data.lib_deps_builtin}
+;    ${common_env_data.lib_deps_external}
+;    https://github.com/me-no-dev/ESPAsyncTCP.git
+;    PubSubClient@2.6
+;    OneWire
